methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:79: error: ';' expected but ',' found.
  faireV(c),
           ^